--- a/2_analysis/Figure3_Performance.ipynb
+++ b/2_analysis/Figure3_Performance.ipynb
@@ -683,7 +683,7 @@
     "temp_diff_calc = temp_diff\n",
     "\n",
     "score_df = tibble(score1=\"\", score2=\"\")\n",
-    "for (score1 in scores){\n",
+    "for (score1 in rev(scores)){\n",
     "    for (score2 in scores){\n",
     "        if (score1!=score2){\n",
     "            score_df_temp = score_df %>% filter(\n",
@@ -708,12 +708,36 @@
    "outputs": [],
    "source": [
     "temp_agg = temp_diff_calc %>% \n",
-    "    pivot_longer(-c(endpoint, iteration), names_to=\"comparison\", values_to=\"delta\") %>% group_by(endpoint, comparison) %>% \n",
+    "    pivot_longer(-c(endpoint, iteration), names_to=\"comparison\", values_to=\"delta\") %>% \n",
+    "    group_by(endpoint, comparison) %>% \n",
+    "    median_qi(delta) %>%\n",
+    "    #filter(endpoint==\"M_all_cause_dementia\") %>% \n",
+    "    mutate(significant = case_when((0!=delta & 0 >= `.lower` & 0 <= `.upper`) ~ \"ns\", TRUE ~ \"*\")) %>%\n",
+    "    mutate(endpoint=factor(endpoint, levels=endpoint_order)) %>% arrange(endpoint)\n",
+    "temp_agg$endpoint = recode(temp_agg$endpoint, !!!endpoint_map) "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "temp_agg = temp_diff_calc %>% \n",
+    "    pivot_longer(-c(endpoint, iteration), names_to=\"comparison\", values_to=\"delta\") %>% \n",
+    "    group_by(endpoint, comparison) %>% \n",
     "    median_qi(delta) %>%\n",
     "    mutate(different = case_when((0!=delta & 0 >= `.lower` & 0 <= `.upper`) ~ \"\", TRUE ~ \"*\")) %>%\n",
-    "    mutate(delta_cindex = glue(\"{round(delta, 3)} ({round(.lower, 3)}, {round(.upper, 3)}){different}\")) %>%\n",
+    "    mutate(delta_cindex = glue(\"{round(delta, 5)} ({round(.lower, 5)}, {round(.upper, 5)}){different}\")) %>%\n",
     "    select(endpoint, comparison, delta_cindex) %>% pivot_wider(names_from=\"comparison\", values_from=\"delta_cindex\")  %>% mutate(endpoint=factor(endpoint, levels=endpoint_order)) %>% arrange(endpoint)\n",
     "temp_agg$endpoint = recode(temp_agg$endpoint, !!!endpoint_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_agg"
    ]
   },
   {
