--- a/2_analysis/Figure4_HRs.ipynb
+++ b/2_analysis/Figure4_HRs.ipynb
@@ -526,7 +526,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "purrr::map_dfr(integer(1000), ~ hrs %>% group_by(endpoint, features) %>% sample_frac(1, replace=TRUE), .id=\"i\") -> temp_hrs"
+    "purrr::map_dfr(integer(1000), ~ hrs %>% group_by(endpoint, features) %>% sample_n(1), .id=\"i\") -> temp_hrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_hrs %>% write_feather(glue(\"outputs/ukb_hrs.feather\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_hrs = temp_hrs %>% \n",
+    "    mutate(HR = exp(coef)) %>% \n",
+    "    mutate(iteration=as.integer(i)) %>% \n",
+    "    select(-i) %>%\n",
+    "    arrange(endpoint, features, iteration)"
    ]
   },
   {
@@ -536,7 +558,7 @@
    "outputs": [],
    "source": [
     "temp_hrs_agg = temp_hrs %>% filter(endpoint %in% ep_sel) %>%\n",
-    "    group_by(endpoint, features) %>% median_qi(`exp(coef)`, na.rm=TRUE) %>% rename(hr = `exp(coef)`) %>%\n",
+    "    group_by(endpoint, features) %>% median_qi(HR, na.rm=TRUE) %>% rename(hr = HR) %>%\n",
     "    mutate(hr = round(hr, 2), .lower=round(.lower, 2), .upper=round(.upper, 2)) %>%#c(hr, .lower, .upper), round, 1) %>%\n",
     "    mutate(HR_Metabolomics = glue(\"{hr} ({.lower}, {.upper})\")) %>% \n",
     "    select(endpoint, features, HR_Metabolomics) %>%\n",
@@ -585,8 +607,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = temp_hrs %>% filter(endpoint %in% ep_sel)   %>%  mutate(endpoint = factor(endpoint, levels = ep_sel)) %>% arrange(endpoint) %>%\n",
-    "    mutate(endpoint = recode(endpoint, !!!endpoint_map)) %>% filter(features %in% c(\"Age+Sex+Metabolomics\", \"ASCVD+Metabolomics\", \"PANEL+Metabolomics\")) %>%\n",
+    "temp = temp_hrs %>% \n",
+    "    filter(endpoint %in% ep_sel)  %>%  \n",
+    "    mutate(endpoint = factor(endpoint, levels = ep_sel)) %>% \n",
+    "    arrange(endpoint) %>%\n",
+    "    mutate(endpoint = recode(endpoint, !!!endpoint_map)) %>% \n",
+    "    filter(features %in% c(\"Age+Sex+Metabolomics\", \"ASCVD+Metabolomics\", \"PANEL+Metabolomics\")) %>%\n",
     "    ungroup() \n",
     "temp %>% head()"
    ]
@@ -602,7 +628,9 @@
     "plot_width=4; plot_height=10; plot_dpi=320\n",
     "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
     "\n",
-    "hr_plot = ggplot(temp, aes(x=fct_rev(factor(features, levels=c(\"Age+Sex+Metabolomics\", \"ASCVD+Metabolomics\", \"PANEL+Metabolomics\"))), y=`exp(coef)`))+#levels=endpoint_order_desc))) +\n",
+    "hr_plot = ggplot(temp, \n",
+    "                 aes(x=fct_rev(factor(features, levels=c(\"Age+Sex+Metabolomics\", \"ASCVD+Metabolomics\", \"PANEL+Metabolomics\"))), \n",
+    "                     y=HR))+#levels=endpoint_order_desc))) +\n",
     "    labs(x=NULL, y=\"Adjusted Hazard Ratio / SD metabolomic state\")+\n",
     "    #geom_boxplot()+\n",
     "    stat_gradientinterval(color=\"black\", alpha=0.7, fatten_point=0.8, interval_size_range=c(0.3, 0.6), fill=\"white\")+\n",
@@ -631,6 +659,13 @@
     "plot_name = \"Figures_4_B_AdjustedHRs_long\"\n",
     "hr_plot %>% ggsave(filename=glue(\"outputs/{plot_name}.pdf\"), device=\"pdf\", width=plot_width, height=plot_height, dpi=plot_dpi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
