--- a/2_analysis/Figure5_DetectionRate.ipynb
+++ b/2_analysis/Figure5_DetectionRate.ipynb
@@ -163,27 +163,12 @@
     "    'M_fractures' = \"Fractures\"\n",
     ")\n",
     "\n",
-    "endpoint_order = c(\"M_type_2_diabetes\", \"M_all_cause_dementia\", \"M_heart_failure\")"
+    "#endpoint_order = c(\"M_type_2_diabetes\", \"M_all_cause_dementia\", \"M_heart_failure\")\n",
+    "endpoint_order = c(\"M_MACE\", \"M_coronary_heart_disease\", \"M_cerebral_stroke\", \"M_all_cause_dementia\", \"M_heart_failure\", \"M_atrial_fibrillation\",\n",
+    "                   \"M_type_2_diabetes\", \"M_liver_disease\", \"M_renal_disease\", \"M_peripheral_arterial_disease\", \"M_venous_thrombosis\",  \"M_abdominal_aortic_aneurysm\",\n",
+    "                   \"M_chronic_obstructuve_pulmonary_disease\", \"M_asthma\", 'M_parkinsons_disease', 'M_cataracts', 'M_glaucoma', 'M_fractures',\n",
+    "                    \"M_lung_cancer\",\"M_non_melanoma_skin_cancer\",\"M_colon_cancer\",\"M_rectal_cancer\",\"M_prostate_cancer\",\"M_breast_cancer\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'DS_Age+Sex+Metabolomics' = \"#53dd6c\",#colors_dict$pastel$orange$mid,\n",
-    "               'DS_SCORE2+Metabolomics' = colors_dict$pastel$red$mid,\n",
-    "               'DS_ASCVD+Metabolomics' = \"#d8315b\",#colors_dict$pastel$red$mid,\n",
-    "               'DS_PANEL+Metabolomics' = \"#1e1b18\" #colors_dict$pastel$red$dark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -259,12 +244,554 @@
     "    \"DS_Age+Sex+Metabolomics\" ,\n",
     "    \"COX_ASCVD\",\n",
     "    \"DS_ASCVD+Metabolomics\",\n",
+    "    \"DS_PANELnoblood+Metabolomics\",\n",
     "    \"COX_PANEL\",\n",
-    "    \"DS_PANEL+Metabolomics\",\n",
-    "     \"DS_PANELjustbloodcount+Metabolomics\",          \n",
-    "    \"DS_PANELnoblood+Metabolomics\"  \n",
+    "    \"DS_PANEL+Metabolomics\"\n",
+    "    # \"DS_PANELjustbloodcount+Metabolomics\",          \n",
+    "    \n",
     "              )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepare_endpoint = function(endpoint){\n",
+    "    dca_temp = predictions_tte %>% filter(endpoint==!!endpoint) %>% \n",
+    "        mutate(score=glue(\"{module}_{features}\")) %>% \n",
+    "        select(eid, score, Ft_10, event, event_time) %>% \n",
+    "        filter(score %in% scores_dca) %>%\n",
+    "        pivot_wider(names_from=\"score\", values_from=\"Ft_10\") %>% \n",
+    "        distinct() %>% \n",
+    "        mutate(\n",
+    "            event10 = case_when(\n",
+    "                (event == 1 & event_time <= 10) ~ 1,\n",
+    "                (event == 1 & event_time > 10) ~ 0,\n",
+    "                TRUE ~ 0)\n",
+    "        ) %>%\n",
+    "        mutate(endpoint=endpoint)\n",
+    "    return(dca_temp)# %>% select(-event, -event_time))\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "library(caret)\n",
+    "calc_plr = function(pred_df, pred_col, threshold){\n",
+    "    tryCatch(\n",
+    "        {\n",
+    "        pred = ifelse(pred_df[[pred_col]]>threshold,1,0)\n",
+    "        actual = pred_df$event\n",
+    "        conf_matrix = table(pred, actual)\n",
+    "        sens_spec = tribble(\n",
+    "        ~Sensitivity, ~Specificity, \n",
+    "        sensitivity(conf_matrix), specificity(conf_matrix)\n",
+    "        )\n",
+    "        return (sens_spec)\n",
+    "        },\n",
+    "        error = function(e){\n",
+    "            #message(\"Caugth an error\")\n",
+    "            #print(e)\n",
+    "            error_tribble =  tribble(\n",
+    "                ~Sensitivity, ~Specificity, \n",
+    "                NA, NA)\n",
+    "            return (error_tribble)\n",
+    "        }\n",
+    "        )\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(pROC)\n",
+    "calc_roc = function(pred_df, pred_col){\n",
+    "    tryCatch(\n",
+    "        {\n",
+    "        pred = pred_df[[pred_col]]#ifelse(pred_df[[pred_col]]>threshold,1,0)\n",
+    "        actual = pred_df$event\n",
+    "        roc_obj = roc(actual, pred)\n",
+    "        x = coords(roc_obj,  ret = c(\"threshold\", \"sensitivity\", \"specificity\", \"ppv\", \"npv\"))\n",
+    "        roc_df <- data.frame(\n",
+    "        threshold = rev(roc_obj$thresholds),\n",
+    "      sens=rev(roc_obj$sensitivities), \n",
+    "      spec=rev(roc_obj$specificities),\n",
+    "        ppv = rev(x$ppv)) %>%\n",
+    "        mutate(lpr = sens / (1-spec))\n",
+    "        return (roc_df)\n",
+    "        },\n",
+    "        error = function(e){\n",
+    "            #message(\"Caugth an error\")\n",
+    "            #print(e)\n",
+    "            error_tribble =  tribble(\n",
+    "                ~threshold, ~sens, ~spec, ~lpr, \n",
+    "                NA, NA, NA, NA)\n",
+    "            return (error_tribble)\n",
+    "        }\n",
+    "        )\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = tibble()\n",
+    "for (endpoint in endpoint_order){\n",
+    "    print(endpoint)\n",
+    "    flush.console()\n",
+    "    df_endpoint = prepare_endpoint(endpoint)\n",
+    "    for (score in scores_dca){\n",
+    "        sens_spec = calc_roc(df_endpoint, score) %>% mutate(endpoint=endpoint, score=score)\n",
+    "        dfs = bind_rows(dfs, sens_spec)\n",
+    "        }\n",
+    "    \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roc_df = dfs %>% filter(!is.infinite(threshold))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "plot_width=15; plot_height=5; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(roc_df, aes(x=1-sens, y=spec, color=score, linetype=score, size=score)) + \n",
+    "    geom_line() + \n",
+    "    scale_color_manual(values=color_map)+\n",
+    "    scale_linetype_manual(values=type_map)+\n",
+    "    scale_size_manual(values=size_map)+\n",
+    "    facet_grid(~endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# specificity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detection_df = roc_df %>% \n",
+    "    mutate(fpr=1-spec) %>%\n",
+    "    mutate(c_5 = fpr-0.05, c_10 = fpr-0.1, c_15 = fpr-0.15, c_20 = fpr-0.20, c_25 = fpr-0.25, c_30 = fpr-0.3, c_35 = fpr-0.35, c_40 = fpr-0.4, c_45 = fpr-0.45, c_50 = fpr-0.5) %>% \n",
+    "    pivot_longer(starts_with(\"c_\"), names_to=\"fpr_name\", values_to=\"c_x\") %>%\n",
+    "    group_by(endpoint, score, fpr_name) %>% \n",
+    "    slice_min(abs(c_x)) %>% select(-c_x) %>% ungroup() %>%\n",
+    "    group_by(endpoint, score, fpr_name) %>% \n",
+    "    summarise(threshold = mean(threshold), sens=mean(sens), ppv=mean(ppv), lpr=mean(lpr)) %>%\n",
+    "     mutate(fpr = as.numeric(str_remove(fpr_name, \"c_\"))/100) %>% \n",
+    "    mutate(score = factor(score, levels= scores_dca)) %>%\n",
+    "    mutate(endpoint = factor(endpoint, levels= endpoint_order)) %>%\n",
+    "    select(-fpr_name) %>% select(endpoint, score, fpr, threshold, sens, ppv, lpr) %>% arrange(endpoint, fpr, score) %>% ungroup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores_map = c(\n",
+    "    \"DS_Metabolomics\" = \"MET\",\n",
+    "    \n",
+    "    \"COX_Age+Sex\" = \"AgeSex\",\n",
+    "    \"DS_Age+Sex+Metabolomics\" = \"AgeSex+MET\",\n",
+    "    \n",
+    "    \"COX_ASCVDnoblood\" = \"ASCVD(noblood)\",\n",
+    "    \"DS_ASCVDnoblood+Metabolomics\" = \"ASCVD(noblood)+MET\",\n",
+    "    \n",
+    "    \"COX_ASCVD\" = \"ASCVD\",\n",
+    "    \"DS_ASCVD+Metabolomics\" = \"ASCVD+MET\",\n",
+    "    \n",
+    "     \"COX_PANELnoblood\" = \"PANEL(noB)\", \n",
+    "    \"DS_PANELnoblood+Metabolomics\" = \"PANEL(noB)+MET\",\n",
+    "    \n",
+    "    \"COX_PANELjustbloodcount\" = \"PANEL(jBC)\", \n",
+    "    \"DS_PANELjustbloodcount+Metabolomics\" = \"PANEL(jBC)+MET\",\n",
+    "    \n",
+    "    \"COX_PANEL\" = \"PANEL\", \n",
+    "    \"DS_PANEL+Metabolomics\" = \"PANEL+MET\"\n",
+    "               )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_size = 8\n",
+    "title_size = 8\n",
+    "facet_size = 8\n",
+    "geom_text_size=3\n",
+    "library(ggplot2); \n",
+    "theme_set(theme_classic(base_size = base_size) + \n",
+    "          theme(strip.background = element_blank(), plot.title=element_text(size=title_size, hjust=0), \n",
+    "                strip.text.x = element_text(size = facet_size),axis.title=element_text(size=8), axis.text=element_text(size=8, color=\"black\"), axis.text.x=element_text(size=8, color=\"black\"),\n",
+    "                legend.position=\"bottom\", axis.line = element_line(size = 0.2), axis.ticks=element_line(size=0.2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=8.25; plot_height=5.5; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "\n",
+    "library(ggdist)\n",
+    "\n",
+    "temp = detection_df %>% filter(fpr==0.05)\n",
+    "met_lpr = ggplot(temp, aes(x=score)) +\n",
+    "    labs(x=NULL, y=\"Positive Likelyhood Ratio (at 5% FPR)\")+#, title=\"Metabolomics (orange) vs. Age+Sex (grey) vs. AgeSexMetabolomic (red)\")+\n",
+    "    geom_point(mapping = aes(y=lpr, color=score, fill=score), alpha=0.7, size=0.7)+\n",
+    "    scale_x_discrete(labels=scores_map)+\n",
+    "    scale_y_continuous(breaks=scales::extended_breaks())+\n",
+    "    scale_color_manual(values=color_map)+scale_fill_manual(values=color_map)+\n",
+    "    #coord_flip() + \n",
+    "    facet_wrap(~endpoint, scales=\"free_y\", labeller = labeller(endpoint = endpoint_map), ncol=6) +theme(legend.position=\"none\")+theme(axis.text.x = element_text(angle =90, hjust = 1))+#+#+\n",
+    "    theme(panel.spacing = unit(0.8, \"lines\"), \n",
+    "          panel.grid.major.y = element_line(), \n",
+    "          axis.text.x = element_text(size=5.5, hjust=1))\n",
+    "\n",
+    "met_lpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_nice = detection_df %>% \n",
+    "    mutate(endpoint = recode(endpoint, !!!endpoint_map), score = recode(score, !!!scores_map)) %>% arrange(endpoint, score)\n",
+    "table_nice %>% write_csv(\"outputs/Suppl_Table_PPV.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_nice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_wide = table_nice %>% rename(`1_threshold`=threshold, `2_sens`=sens, `3_ppv`=ppv, `4_lpr`=lpr) %>%\n",
+    "    pivot_wider(names_from=\"fpr\", values_from=c(\"1_threshold\", \"2_sens\", \"3_ppv\", \"4_lpr\"), names_glue=\"{fpr}_{.value}\") %>% select(sort(colnames(.))) %>% select(endpoint, score, everything())\n",
+    "table_wide %>% write_csv(\"outputs/Suppl_Table_PPV_wide.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_wide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detection_df_clean = detection_df %>% select(ppv, endpoint, score, fpr) %>% \n",
+    "    pivot_wider(names_from=\"score\", values_from=\"ppv\", values_fn=mean) %>% \n",
+    "    arrange(endpoint, fpr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detection_df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=15; plot_height=5; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(detection_df, aes(x=fpr, y=ppv, color=score, linetype=score, size=score)) + geom_line() + \n",
+    "    facet_wrap(~endpoint, scales=\"free_y\") +\n",
+    "  scale_color_manual(values=color_map)+\n",
+    "    scale_linetype_manual(values=type_map)+\n",
+    "    scale_size_manual(values=size_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=15; plot_height=5; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(detection_df, aes(x=spec, y=sens, color=score, linetype=score, size=score)) + geom_line() + facet_grid(~endpoint) +\n",
+    "  scale_color_manual(values=color_map)+\n",
+    "    scale_linetype_manual(values=type_map)+\n",
+    "    scale_size_manual(values=size_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=15; plot_height=5; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(dfs, aes(x=threshold, y=lpr, color=score, linetype=score, size=score)) + geom_line() + facet_grid(~endpoint) +\n",
+    "  scale_color_manual(values=color_map)+\n",
+    "    scale_linetype_manual(values=type_map)+\n",
+    "    scale_size_manual(values=size_map)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roc_df_long = dfs %>% pivot_longer(c(sens, spec), names_to=\"type\", values_to=\"value\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=8.25; plot_height=10; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(roc_df_long, aes(x=threshold, y=value, color=type)) + geom_line() + facet_grid(score~endpoint)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "dfs = tibble()\n",
+    "for (endpoint in endpoint_order){\n",
+    "    print(endpoint)\n",
+    "    flush.console()\n",
+    "    df_endpoint = prepare_endpoint(endpoint)\n",
+    "    for (score in scores_dca){\n",
+    "        print(score)\n",
+    "        flush.console()\n",
+    "        for (threshold in seq(0.01, 0.50, by=0.01)){\n",
+    "            #if (sens_spec$Sensitivity != sens_spec$Sensitivit) next\n",
+    "            sens_spec = calc_plr(df_endpoint, score, threshold) %>% mutate(endpoint=endpoint, score=score, threshold=threshold)\n",
+    "            dfs = bind_rows(dfs, sens_spec)\n",
+    "            } \n",
+    "        }\n",
+    "    \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = dfs %>% mutate(lpr = Sensitivity/(1-Specificity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp %>% \n",
+    "    select(endpoint, score, threshold, lpr) %>% \n",
+    "    pivot_wider(names_from=\"score\", values_from=\"lpr\") %>% \n",
+    "    select(endpoint, threshold, all_of(scores_dca)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_width=8.25; plot_height=10; plot_dpi=320\n",
+    "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
+    "ggplot(temp, aes(x=threshold, y=lpr, color=score, type=score, size=score)) + \n",
+    "    geom_line() + \n",
+    "    scale_color_manual(values=color_map)+\n",
+    "    scale_linetype_manual(values=type_map)+\n",
+    "    scale_size_manual(values=size_map)+\n",
+    "    facet_grid(endpoint~., scales=\"free_y\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_plr(df_endpoint, \"DS_Metabolomics\", threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endpoint = \"M_type_2_diabetes\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.1\n",
+    "calc_plr(df_endpoint, \"DS_Metabolomics\", threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tribble(\n",
+    "    ~Sensitivity, ~Specificity, \n",
+    "    sensitivity(conf_matrix), specificity(conf_matrix)\n",
+    ")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensitivity(conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specificity(conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plr = sensitivity(conf_matrix) / (1-specificity(conf_matrix))\n",
+    "plr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(ROCit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survivalROC(temp$event_time, temp$event, temp$Ft, predict.time=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -333,6 +860,22 @@
    "outputs": [],
    "source": [
     "dca_data_agg = bind_rows(dca_data) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dca_data_agg %>% mutate(detection_rate = tp_rate/fp_rate) %>% filter(fp_rate>0.95) %>% sample_n(10)"
    ]
   },
   {
