--- a/2_analysis/SupplFigure_APOE4_Dementia_5.ipynb
+++ b/2_analysis/SupplFigure_APOE4_Dementia_5.ipynb
@@ -487,8 +487,8 @@
     "        scale_color_manual(values=c(`0.1`=\"#7AC6FF\", `0.5`=\"#4F8EC1\", `0.9`=\"#023768\"))+ \n",
     "        scale_fill_manual(values=c(`0.1`=alpha(\"#7AC6FF\", 0.3), `0.5`=alpha(\"#4F8EC1\", 0.3), `0.9`=alpha(\"#023768\", 0.3)))+                    \n",
     "                           theme(legend.position=\"none\")+               \n",
-    "        facet_grid(cols=vars(features)) + \n",
-    "        theme(strip.background = element_blank(), strip.text.x = element_blank())"
+    "        facet_grid(cols=vars(features), labeller=labeller(features=c(\"PANEL\"=\"PANEL\", \"PANELapoe4\"=\"PANEL+APOE4\"))) #+ \n",
+    "        #theme(strip.background = element_blank(), strip.text.x = element_blank())"
    ]
   },
   {
@@ -622,7 +622,7 @@
     "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
     "\n",
     "hr_plot = ggplot(temp, aes(x=fct_rev(factor(features, levels=c(\"PANEL+Metabolomics\", \"PANELapoe4+Metabolomics\"))), y=`exp(coef)`))+#levels=endpoint_order_desc))) +\n",
-    "    labs(x=NULL, y=\"Adjusted Hazard Ratio\")+\n",
+    "    labs(x=NULL, y=\"Adjusted Hazard Ratio / SD Metabolomic State\")+\n",
     "    #geom_boxplot()+\n",
     "    stat_gradientinterval(color=\"black\", alpha=0.7, fatten_point=0.8, interval_size_range=c(0.3, 0.6), fill=\"white\")+\n",
     "\n",
@@ -722,6 +722,49 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "library(\"jsonlite\")\n",
+    "colors_path = \"colors.json\"\n",
+    "colors_dict = read_json(colors_path)\n",
+    "\n",
+    "color_map <- c('COX_Age+Sex' = colors_dict$pastel$grey$light, \n",
+    "               'DS_Metabolomics' = \"#4F8EC1\",  #colors_dict$pastel$orange$dark,\n",
+    "               'COX_ASCVD' = colors_dict$pastel$grey$dark, \n",
+    "               'COX_PANEL' = \"black\", \n",
+    "               'DS_Age+Sex+Metabolomics' = \"forestgreen\", #\"#53dd6c\",#colors_dict$pastel$orange$mid,\n",
+    "               'DS_ASCVD+Metabolomics' = \"#d8315b\",#colors_dict$pastel$red$mid,\n",
+    "               'DS_PANELnoblood+Metabolomics' = \"#023768\", #\"forestgreen\",\n",
+    "               'DS_PANEL+Metabolomics' = \"black\" #colors_dict$pastel$red$dark\n",
+    "      )\n",
+    "\n",
+    "type_map <- c('COX_Age+Sex' = \"solid\", \n",
+    "               'DS_Metabolomics' = \"solid\",  #colors_dict$pastel$orange$dark,\n",
+    "               'COX_ASCVD' = \"dashed\", \n",
+    "               'COX_PANEL' = \"dotted\", \n",
+    "               'DS_Age+Sex+Metabolomics' = \"solid\",#colors_dict$pastel$orange$mid,\n",
+    "               'DS_ASCVD+Metabolomics' = \"solid\",#colors_dict$pastel$red$mid,\n",
+    "               'DS_PANEL+Metabolomics' = \"solid\", #colors_dict$pastel$red$dark\n",
+    "                'DS_PANELnoblood+Metabolomics' = \"solid\",\n",
+    "              \"Treat All\" = \"solid\",\n",
+    "              \"Treat None\" = \"solid\"\n",
+    "      )\n",
+    "\n",
+    "size_map <- c('COX_Age+Sex' = 0.25, \n",
+    "               'DS_Metabolomics' = 0.25,  #colors_dict$pastel$orange$dark,\n",
+    "               'COX_ASCVD' = 0.25, \n",
+    "               'COX_PANEL' = 0.5, \n",
+    "               'DS_Age+Sex+Metabolomics' = 0.25,#colors_dict$pastel$orange$mid,\n",
+    "               'DS_ASCVD+Metabolomics' = 0.25,#colors_dict$pastel$red$mid,\n",
+    "               'DS_PANEL+Metabolomics' = 0.25, #colors_dict$pastel$red$dark\n",
+    "                'DS_PANELnoblood+Metabolomics' = 0.25,\n",
+    "              \"Treat All\" = 0.25,\n",
+    "              \"Treat None\" = 0.25\n",
+    "      )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -747,8 +790,8 @@
     "type_map <- c('COX_Age+Sex' = \"dashed\", \n",
     "               'DS_Metabolomics' = \"solid\",  #colors_dict$pastel$orange$dark,\n",
     "               'COX_ASCVD' = \"dashed\", \n",
-    "               'COX_PANEL' = \"dashed\", \n",
-    "               'COX_PANELapoe4' = \"dashed\", \n",
+    "               'COX_PANEL' = \"dotted\", \n",
+    "               'COX_PANELapoe4' = \"dotted\", \n",
     "               'DS_Age+Sex+Metabolomics' = \"solid\",#colors_dict$pastel$orange$mid,\n",
     "               'DS_ASCVD+Metabolomics' = \"solid\",#colors_dict$pastel$red$mid,\n",
     "               'DS_PANEL+Metabolomics' = \"solid\", #colors_dict$pastel$red$dark\n",
@@ -861,10 +904,11 @@
     "plotA = \n",
     "    ggplot(temp_plot)+\n",
     "      labs(x=\"Threshold Probability [%]\", y=\"Standardized Net Benefit [%]\")+\n",
-    "       \n",
-    "    geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`COX_PANEL`, ymax=`DS_PANEL+Metabolomics`), fill=\"black\", alpha=0.1, colour = NA)+\n",
-    "    geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`DS_PANEL+Metabolomics`, ymax=`COX_PANELapoe4`), fill=\"red\", alpha=0.1, colour = NA)+\n",
-    "    geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`COX_PANELapoe4`, ymax=`DS_PANELapoe4+Metabolomics`), fill=\"black\", alpha=0.1, colour = NA)+\n",
+    "\n",
+    "    #geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=0, ymax=`COX_PANEL`), fill=\"black\", alpha=0.3, colour = NA)+       \n",
+    "    geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`COX_PANEL`, ymax=`DS_PANEL+Metabolomics`), fill=\"firebrick\", alpha=0.7, colour = NA)+\n",
+    "    #geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`DS_PANEL+Metabolomics`, ymax=`COX_PANELapoe4`), fill=\"black\", alpha=0.05, colour = NA)+\n",
+    "    geom_ribbon(data=temp_plot_wide, mapping=aes(x=threshold, ymin=`COX_PANELapoe4`, ymax=`DS_PANELapoe4+Metabolomics`), fill=\"firebrick\", alpha=0.7, colour = NA)+\n",
     "geom_line(data=temp_plot, mapping=aes(x=threshold, y=st_net_benefit*100, color=label, linetype=label), size=0.25) +\n",
     "      coord_cartesian(xlim=c(0, 0.1), ylim=c(0, 100))+\n",
     "      scale_x_continuous(labels=function(x) x*100, expand=c(0, 0))+\n",
@@ -943,8 +987,15 @@
    "outputs": [],
    "source": [
     "plot_name = \"Suppl_Figures_6_APOE4\"\n",
-    "fig_apoe4 %>% ggsave(filename=glue(\"/home/steinfej/code/21_metabolomics_analysis/Round1/Figures/outputs/{plot_name}.pdf\"), device=cairo_pdf, width=plot_width, height=plot_height, dpi=plot_dpi)"
+    "fig_apoe4 %>% ggsave(filename=glue(\"outputs/{plot_name}.pdf\"), device=cairo_pdf, width=plot_width, height=plot_height, dpi=plot_dpi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
