--- a/2_analysis/SupplFigure_SHAP_3_Areas.ipynb
+++ b/2_analysis/SupplFigure_SHAP_3_Areas.ipynb
@@ -126,17 +126,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "base_size = 8\n",
-    "title_size = 10\n",
-    "facet_size = 10\n",
-    "geom_text_size=3\n",
-    "library(ggplot2); \n",
-    "theme_set(theme_classic(base_size = base_size) + \n",
-    "          theme(strip.background = element_blank(), plot.title=element_text(size=title_size, hjust=0), \n",
-    "                strip.text.x = element_text(size = facet_size),axis.title=element_text(size=10), axis.text=element_text(size=8, color=\"black\"),\n",
-    "                legend.position=\"bottom\", axis.line = element_line(size = 0.2), axis.ticks=element_line(size=0.2)))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -494,6 +484,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_size = 10\n",
+    "title_size = 10\n",
+    "facet_size = 10\n",
+    "geom_text_size=3\n",
+    "library(ggplot2); \n",
+    "theme_set(theme_classic(base_size = base_size) + \n",
+    "          theme(strip.background = element_blank(), plot.title=element_text(size=title_size, hjust=0), \n",
+    "                strip.text.x = element_text(size = facet_size),axis.title=element_text(size=10), axis.text=element_text(size=10, color=\"black\"),\n",
+    "                legend.position=\"bottom\", axis.line = element_line(size = 0.2), axis.ticks=element_line(size=0.2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -503,13 +510,11 @@
     "options(repr.plot.width = plot_width, repr.plot.height = plot_height, repr.plot.res=plot_dpi)\n",
     "\n",
     "\n",
-    "met_diffs = ggplot(temp_plot, aes(x=factor(area, levels=c(\"A\", \"B\", \"C\")), y=value, color=area, fill=area)) +\n",
+    "met_diffs = ggplot(temp_plot, aes(x=factor(area, levels=c(\"A\", \"B\", \"C\")), y=value)) +\n",
     "    labs(x=NULL, y=\"Metabolite value\")+\n",
-    "    geom_violin(alpha=0.7, size=0.25)+\n",
-    "    facet_wrap(~abbreviation, scales=\"free\")+\n",
-    "    scale_fill_grey(start=0.8, end=0.2)+\n",
-    "    scale_color_grey(start=0.8, end=0.2)+\n",
-    "    theme(legend.position=\"none\") + theme(strip.text.x = element_text(size = 8))\n",
+    "    geom_violin(alpha=0.7, size=0.25, color=\"#023768\", fill=\"#023768\")+\n",
+    "    facet_wrap(~abbreviation, scales=\"free\", ncol=10)+\n",
+    "    theme(legend.position=\"none\") + theme(strip.text.x = element_text(size = 11))\n",
     "\n",
     "met_diffs"
    ]
@@ -522,8 +527,15 @@
    "source": [
     "library(gt)\n",
     "plot_name = \"Suppl_Figures_9_UMAPAreas\"\n",
-    "met_diffs %>% ggsave(filename=glue(\"/home/steinfej/code/21_metabolomics_analysis/Round1/Figures/outputs/{plot_name}.pdf\"), device=\"pdf\", width=plot_width, height=plot_height, dpi=plot_dpi)"
+    "met_diffs %>% ggsave(filename=glue(\"outputs/{plot_name}.pdf\"), device=\"pdf\", width=plot_width, height=plot_height, dpi=plot_dpi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
